added armor trim cosmetics